<resources>
    <string name="app_name">LeaseOrRentHome</string>
    <string name="apartment">Apartment</string>
    <string name="detachedHome">Detached Home</string>
    <string name="semiDetachedHome">Semi-detached Home</string>
    <string name="condominium">Condominium</string>
    <string name="townHouse">Town House</string>
    <string name="selectFromMenu">Select your home from the \nmenu options...</string>
    <string name="apartmentHeader">Apartments</string>
    <string name="imageApartment1">Image of a yellow building facade</string>
    <string name="imageApartment2">Image of inside of an empty apartment</string>
    <string name="imageApartment3">Image of the living room of an apartment</string>
    <string name="descriptionApartment1">497 Brimorton Drive: $1,800</string>
    <string name="descriptionApartment2">1050 Markham Road: $1,700</string>
    <string name="descriptionApartment3">20 Tuxedo Court: $2,100</string>
    <string name="checkoutButton">CHECKOUT</string>
    <string name="homeDetailsHeader">Home Details:</string>
    <string name="homeDetailsNextButton">NEXT</string>
    <string name="paymentHeader">Choose Payment Option</string>
    <string name="cash">Cash</string>
    <string name="creditCard">Credit Card</string>
    <string name="debitCard">Debit Card</string>
    <string name="paymentButton">SUBMIT</string>
    <string name="formularyHeader">Please enter your information below:</string>
    <string name="customerName">Customer Name</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="favouriteBook">Favourite Book</string>
    <string name="dreamVacation">Dream Vacation</string>
    <string name="favouriteMovie">Favourite Movie</string>
    <string name="submitForm">SUBMIT</string>
    <string name="success">SUCCESS!</string>
    <string name="returnButton">Start a new search</string>
    <string name="detachedHeader">Detached Home</string>
    <string name="descriptionDetached1">224 Dundas Street: $4,100</string>
    <string name="descriptionDetached2">75 Queen Street: $4,500</string>
    <string name="descriptionDetached3">150 Carlton Street: $4,800</string>
    <string name="imageDetached1">Image of first detached home</string>
    <string name="imageDetached2">Image of second detached home</string>
    <string name="imageDetached3">Image of third detached home</string>
    <string name="semiDetachedHeader">Semi Detached Home</string>
    <string name="descriptionSemiDetached1">123 Front Street: $3,200</string>
    <string name="descriptionSemiDetached2">385 Bay Street: $3,500</string>
    <string name="descriptionSemiDetached3">42 Regent Street: $3,350</string>
    <string name="imageSemiDetached1">Image of first semi-detached home</string>
    <string name="imageSemiDetached2">Image of second semi-detached home</string>
    <string name="imageSemiDetached3">Image of third semi-detached home</string>
    <string name="condominiumHeader">Condominium</string>
    <string name="descriptionCondominium1">520 King Street: $2,200</string>
    <string name="descriptionCondominium2">80 Spadina Avenue: $3,300</string>
    <string name="descriptionCondominium3">100 Adelaide Street: $2,600</string>
    <string name="imageCondominium1">Image of first condominium</string>
    <string name="imageCondominium2">Image of second condominium</string>
    <string name="imageCondominium3">Image of third condominium</string>
    <string name="townHouseHeader">Town House</string>
    <string name="descriptionTownHouse1">678 Yonge Street: $2,950</string>
    <string name="descriptionTownHouse2">200 University Avenue: $2,700</string>
    <string name="descriptionTownHouse3">330 Richmond Street: $2,650</string>
    <string name="imageTownHouse1">Image of first Town House</string>
    <string name="imageTownHouse2">Image of second Town House</string>
    <string name="imageTownHouse3">Image of third Town House</string>
</resources>