<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Apartment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        tools:context=".Apartment">

        <TextView
            android:id="@+id/apartmentHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="14dp"
            android:text="@string/apartmentHeader"
            android:textColor="#020202"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:layout_weight="1"
            android:buttonTint="#5234C2"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apartmentHeader"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="56dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/descriptionApartment1"
            android:textAlignment="viewStart"
            android:textColor="#004D40"
            android:textFontWeight="800"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox1"
            app:layout_constraintTop_toBottomOf="@+id/apartmentHeader"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageApartment1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/apartmentHeader"
            app:srcCompat="@drawable/apartment_berlin"
            tools:ignore="ImageContrastCheck" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="91dp"
            android:layout_weight="1"
            android:buttonTint="#5234C2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="91dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/descriptionApartment2"
            android:textAlignment="viewStart"
            android:textColor="#004D40"
            android:textFontWeight="800"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageApartment2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/empty_apartment"
            tools:ignore="ImageContrastCheck" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="91dp"
            android:layout_weight="1"
            android:buttonTint="#5234C2"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="91dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/descriptionApartment3"
            android:textAlignment="viewStart"
            android:textColor="#004D40"
            android:textFontWeight="800"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkBox3"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlCompat,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageApartment3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/contemporary_apartment"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="491dp" />

        <Button
            android:id="@+id/apartmentCheckoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/checkoutButton"
            android:textColor="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>